[gd_scene load_steps=25 format=3 uid="uid://d2f3w61s8ym8t"]

[ext_resource type="Script" uid="uid://c6lapchphdrp" path="res://Scripts/player.gd" id="1_5a7ea"]
[ext_resource type="Texture2D" uid="uid://b3hsqtrgy0ijp" path="res://Images/Background.png" id="1_go701"]
[ext_resource type="Texture2D" uid="uid://dxj2p64fsv3in" path="res://Images/BeeFrames.png" id="2_5a7ea"]
[ext_resource type="Texture2D" uid="uid://b6yaq37t5qit3" path="res://Images/Bee.png" id="2_5v1tr"]
[ext_resource type="Script" uid="uid://dabvnjhq4hbwx" path="res://Scripts/target.gd" id="3_5ukr8"]
[ext_resource type="Texture2D" uid="uid://4f4upkhdc2sp" path="res://Images/LoopTarget.png" id="3_8j60k"]
[ext_resource type="Texture2D" uid="uid://6hv5pawj8oyn" path="res://Images/WingOption2.png" id="4_0fj1v"]
[ext_resource type="PackedScene" uid="uid://b8wf1pgjfvxpp" path="res://Scenes/hud.tscn" id="7_k7acu"]
[ext_resource type="Script" uid="uid://hgunqw4notri" path="res://Scripts/tree_area.gd" id="7_o06y3"]
[ext_resource type="PackedScene" uid="uid://bq2w5h0x5ehxm" path="res://Scenes/sound_manager.tscn" id="9_5v1tr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ikia7"]
atlas = ExtResource("2_5v1tr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j60k"]
atlas = ExtResource("2_5a7ea")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo5ed"]
atlas = ExtResource("2_5a7ea")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ukr8"]
atlas = ExtResource("2_5a7ea")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o06y3"]
atlas = ExtResource("2_5a7ea")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7acu"]
atlas = ExtResource("2_5a7ea")
region = Rect2(0, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5v1tr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikia7")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j60k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo5ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ukr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o06y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7acu")
}],
"loop": true,
"name": &"flipLtoR",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7acu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o06y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ukr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo5ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j60k")
}],
"loop": true,
"name": &"flipRtoL",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8j60k"]
radius = 13.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k7acu"]
radius = 85.1587

[sub_resource type="AtlasTexture" id="AtlasTexture_5v1tr"]
atlas = ExtResource("3_8j60k")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fj1v"]
atlas = ExtResource("3_8j60k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikia7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v1tr")
}],
"loop": true,
"name": &"targeted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fj1v")
}],
"loop": true,
"name": &"untargeted",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o06y3"]
radius = 139.129

[sub_resource type="CircleShape2D" id="CircleShape2D_5v1tr"]
radius = 64.0

[node name="World" type="Node2D"]

[node name="Player" type="RigidBody2D" parent="." groups=["player"]]
z_index = 3
collision_layer = 4
collision_mask = 4
mass = 0.05
gravity_scale = 0.25
script = ExtResource("1_5a7ea")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_5v1tr")
animation = &"dead"

[node name="Wing" type="Sprite2D" parent="Player/Sprite2D"]
z_index = -1
position = Vector2(11, -11)
texture = ExtResource("4_0fj1v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8j60k")

[node name="LoopPoint" type="Marker2D" parent="Player"]
position = Vector2(0, -100)

[node name="Area2D" type="Area2D" parent="Player/LoopPoint"]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_5ukr8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/LoopPoint/Area2D"]
shape = SubResource("CircleShape2D_k7acu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/LoopPoint/Area2D"]
position = Vector2(0, 5)
sprite_frames = SubResource("SpriteFrames_ikia7")
animation = &"untargeted"

[node name="Camera2D" type="Camera2D" parent="Player"]
process_callback = 0
limit_left = -4000
limit_top = -1000
limit_right = 4000
limit_bottom = 1000

[node name="Background1" type="Sprite2D" parent="."]
position = Vector2(0, 2)
texture = ExtResource("1_go701")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(6000, 0)
texture = ExtResource("1_go701")

[node name="Background3" type="Sprite2D" parent="."]
position = Vector2(-6000, 0)
texture = ExtResource("1_go701")

[node name="TreeArea" type="Area2D" parent="." groups=["flowerzone"]]
position = Vector2(364, -231)
script = ExtResource("7_o06y3")

[node name="CollisionShape2D58" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2685, 298)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D57" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2513, 302)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D54" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2659, 64)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D56" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2602, 322)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D55" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2699, 106)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D53" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2558, -77)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D52" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2407, -258)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D51" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2531, -106)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D50" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2118, -106)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D49" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1957, 57)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D42" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1210, 72)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D48" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2310, -66)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D46" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2194, 121)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D47" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2453, 117)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D45" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2286, 273)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D44" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2006, 277)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D39" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1118, -456)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D41" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1180, -132)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D38" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-850, -437)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D37" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1000, -484)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D40" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1131, -402)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D36" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-601, -418)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D35" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-614, -300)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-979, 44)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D34" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-680, -38)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D33" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-684, 226)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D32" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-838, 265)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-842, 20)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1003, -212)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-819, -214)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(14, 10)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1553, -105)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1634, -49)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1724, -44)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1854, -55)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(2046, -78)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1965, -52)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(2190, -286)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1990, -313)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1718, -427)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1816, -266)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1653, -255)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1542, -253)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1035, 276)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(609, -128)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(476, -302)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(748, 58)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(731, 251)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(594, 268)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D26" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(324, 231)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D27" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(80, 235)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D25" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(500, 77)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D28" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(187, 261)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D29" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(193, 49)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D30" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(349, -17)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D31" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(424, -111)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(178, -156)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D43" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2144, 307)
shape = SubResource("CircleShape2D_o06y3")

[node name="CollisionShape2D59" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-145, -3)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D60" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-108, 27)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D61" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-93, -34)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D62" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1319, -147)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D63" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1279, -180)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D64" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-963, 381)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D65" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1182, 197)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D66" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1227, 171)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D67" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-602, -520)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D68" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1805, 48)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D69" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-1844, 16)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D70" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2401, -357)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D71" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(-2118, -213)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D72" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1434, -76)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D73" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1446, -107)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D74" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1465, -43)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D75" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1989, -431)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D76" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(2020, -417)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D77" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1956, -403)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D78" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1451, -241)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D79" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1463, -292)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D80" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1627, -426)
shape = SubResource("CircleShape2D_5v1tr")

[node name="CollisionShape2D81" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(2136, -64)
shape = SubResource("CircleShape2D_5v1tr")

[node name="HUD" parent="." instance=ExtResource("7_k7acu")]

[node name="SoundManager" parent="." instance=ExtResource("9_5v1tr")]

[connection signal="animation_finished" from="Player/Sprite2D" to="Player" method="_on_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Player/LoopPoint/Area2D" to="Player/LoopPoint/Area2D" method="_on_area_entered"]
[connection signal="area_exited" from="Player/LoopPoint/Area2D" to="Player/LoopPoint/Area2D" method="_on_area_exited"]
